Add MacOS Native Netty resolver